// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing a component with properties, and a fetch inside it should shows items when images are charged with useFeTCHgIF  1`] = `
<Fragment>
  <h3
    calssName="animate__animated animate__fadeInLeft"
  >
    Peaky blinders
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    loading...
  </p>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="testing my code"
      url="http://something.jnp"
    />
  </div>
</Fragment>
`;

exports[`testing a component with properties, and a fetch inside observar si se renderiza correctamente  1`] = `
<Fragment>
  <h3
    calssName="animate__animated animate__fadeInLeft"
  >
    Peaky blinders
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
